test/src/e2e_vm_tests/test_programs/should_pass/language/use_full_path_names/src/main.sw
script;

mod foo;
mod bar;
mod baz;

fn main() -> u64 {
    let x = foo::Foo {
        foo: 1u32,
    };
    let y = bar::Bar::Baz(true);
    let z = ::bar::Bar::Baz(false);
    baz::return_1()
}
