test/src/e2e_vm_tests/test_programs/should_fail/recursive_type_unification/src/main.sw
script;

enum MyOption<T> {
    Some: T,
}

fn foo<T>(value: T) -> MyOption<T> {
    MyOption::Some(value)
}

fn bar<V>(value: V) -> MyOption<V> {
    MyOption::Some::<V>(foo::<V>(value))
}

fn main() {
    let x = bar(false);
}
